--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -9,6 +9,7 @@
     border-radius: 20px;
     background-color: var(--gray1);
     font-family: sans-serif;
+    box-shadow: 5px 5px 20px black;
 }
 
 .insideContainer {
@@ -25,9 +26,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    // border: 3px solid black;
     width: 360px;
     height: 37px;
+    margin-top: .5rem;
 }
 
 .pokeName {
@@ -56,38 +57,50 @@
 .imgContainer {
     width: 345px;
     height: 225px;
-    background-color: white;
+    background-color: var(--gray1);
     border: 7px solid var(--brown1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#pokeImg {
+    width: 98%;
+    height: 98%;
 }
 
 .description {
     display: flex;
     flex-direction: column;
     align-items: center;
-    // border: 1px solid black;
+    border: var(--testBorder);
     width: 355px;
     margin-top: .5rem;
 }
 
-.description h3 {
-    margin: .5rem 0;
-}
-
 #powerContainer {
-    // border: 1px solid black;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 4.5rem;
+    border-bottom: 1px solid black;
 }
 
 #powerName {
     color: var(--red1);
+    width: 100%;
+    text-align: left;
+    margin: 0;
 }
 
 .descriptionEffect {
     font-weight: bold;
+    width: 100%;
     font-size: .9rem;
     margin: 0;
+    text-align: left;
 }
 
 #hr {
@@ -97,10 +110,21 @@
     margin: .3rem 0;
 }
 
-.attackHeader {
+#attackContainer {
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    height: 6rem;
+    border-bottom: 1px solid black;
+}
+
+.attackHeader {
+    // border: var(--testBorder);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 90%;
+    height: 100%;
+    // justify-content: space-between;
 }
 
 .powerTypeIconsContainer {
@@ -111,34 +135,52 @@
 }
 
 #attackName {
-    text-align: center;
-    flex: 2;
+    text-align: left;
+    justify-content: center;
+    margin: 0;
 }
 
 #attackValue {
-    flex: 1;
-    font-size: 2rem;
-    margin: 0;
-    text-align: right;
+    // border: var(--testBorder);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10%;
+    font-size: 2.4rem;
+    // flex: 1;
+    // margin: 0;
+    // text-align: right;
 }
 
 .powerRelations {
     display: flex;
-    // border: 1px solid black;
+    border: var(--testBorder);
     width: 100%;
-    align-self: flex-start;
     justify-content: space-around;
+    margin-top: .5rem;
+    // align-self: flex-start;
+}
+
+.relation {
+    // border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 5rem;
 }
 
 .powerRelations p {
-    margin-bottom: .4rem;
+    margin-bottom: .3rem;
 }
 
 .relationData {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: .3rem;
+    // border: 1px solid red;
+    height: 100%;
+    // gap: .3rem;
 }
 
 .relationData span {
@@ -147,8 +189,12 @@
 }
 
 .retreat {
+    border: var(--testBorder);
     display: flex;
     width: 100%;
     align-items: center;
-    gap: .8rem;
+    gap: .5rem;
+    padding: .3rem 0;
+    border-bottom: 1px solid black;
+
 }
