--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,130 +1,165 @@
-.outsiderContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 5rem;
-    width: 420px;
-    height: 590px;
-    border-radius: 20px;
-    background-color: var(--gray1);
-    font-family: sans-serif;
-    box-shadow: 5px 5px 20px black;
+* {
+    box-sizing: border-box;
+}
+
+h2 {
+   margin: 0;
+}
+
+p {
+   font-weight: bold;
+   width: 100%;
+   font-size: .9rem;
+   margin: 0;
+   text-align: left;
 }
 
 .insideContainer {
+    position: absolute;
+    top: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 95%;
-    height: 96.5%;
-    border-radius: 10px;
+    width: 400px;
+    height: auto;
     background-color: var(--yellow1);
+    font-family: sans-serif;
+    border: 13px solid var(--gray1);
+    border-radius: 20px;
+    padding: .5rem .8rem;
+    box-shadow: 5px 5px 20px rgb(27, 27, 27);
 }
+
+#content {
+    width: 100%;
+}
+
 
 .pokeHeader {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 360px;
-    height: 37px;
-    margin-top: .5rem;
+    width: 100%;
 }
 
-.pokeName {
-    font-size: 2rem;
-    font-weight: bold;
+.pokeHeader h1 {
+    margin: 0;
 }
 
 .hpAndType {
     display: flex;
     align-items: center;
-    
-}
-
-.hpAndType div {
-    display: flex;
-    align-items: baseline;
-}
-
-.hpValue {
-    font-size: 1.7rem;
-    font-weight: bold;
-    align-self: flex-end;
-    padding-right: .5rem;
+    justify-content: center;
 }
 
 .imgContainer {
-    width: 345px;
+    display: flex;
+    width: 100%;
     height: 225px;
     background-color: var(--gray1);
     border: 7px solid var(--brown1);
-    display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#pokeImg {
-    width: 98%;
-    height: 98%;
+.imgContainer img {
+    width: 210px;
 }
 
 .description {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: var(--testBorder);
-    width: 355px;
-    margin-top: .5rem;
+    width: 100%;
 }
 
 #powerContainer {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    padding: .5rem 0;
+    border-bottom: var(--borderBottom);
+}
+
+#powerContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    // padding: 1rem 0;
     width: 100%;
     height: 4.5rem;
-    border-bottom: 1px solid black;
+    overflow-y: auto;
 }
 
-#powerName {
+#powerContent h2 {
     color: var(--red1);
-    width: 100%;
-    text-align: left;
-    margin: 0;
 }
 
-.descriptionEffect {
-    font-weight: bold;
-    width: 100%;
-    font-size: .9rem;
-    margin: 0;
-    text-align: left;
+#powerContent::-webkit-scrollbar {
+    width: 5px;
+    align-items: center;
 }
 
-#hr {
-    background-color: black;
-    height: 2px;
-    width: 100%;
-    margin: .3rem 0;
+#powerContent::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+
+#powerContent::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
 }
 
 #attackContainer {
     display: flex;
+    justify-content: space-between;
     width: 100%;
-    height: 6rem;
-    border-bottom: 1px solid black;
+    height: 5.5rem;
+    border-bottom: var(--borderBottom);
+    padding: .5rem 0;
 }
 
 .attackHeader {
-    // border: var(--testBorder);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 90%;
+    justify-content: flex-start;
+    width: 85%;
     height: 100%;
-    // justify-content: space-between;
+    overflow-y: auto;
+}
+
+.attackHeader::-webkit-scrollbar {
+    width: 5px;
+    align-items: center;
+}
+
+.attackHeader::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+
+.attackHeader::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+}
+
+#attackValue {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1fr;
+    font-size: 2.4rem;
+}
+
+.retreat {
+    border: var(--testBorder);
+    display: flex;
+    width: 100%;
+    align-items: center;
+    gap: .5rem;
+    padding: .5rem 0;
+    border-bottom: var(--borderBottom);
+    
 }
 
 .powerTypeIconsContainer {
@@ -134,35 +169,14 @@
     align-items: center;
 }
 
-#attackName {
-    text-align: left;
-    justify-content: center;
-    margin: 0;
-}
-
-#attackValue {
-    // border: var(--testBorder);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 10%;
-    font-size: 2.4rem;
-    // flex: 1;
-    // margin: 0;
-    // text-align: right;
-}
-
 .powerRelations {
     display: flex;
-    border: var(--testBorder);
     width: 100%;
     justify-content: space-around;
-    margin-top: .5rem;
-    // align-self: flex-start;
+    padding-top: .5rem;
 }
 
 .relation {
-    // border: 1px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -178,9 +192,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    // border: 1px solid red;
     height: 100%;
-    // gap: .3rem;
 }
 
 .relationData span {
@@ -188,13 +200,3 @@
     font-size: 1.2rem;
 }
 
-.retreat {
-    border: var(--testBorder);
-    display: flex;
-    width: 100%;
-    align-items: center;
-    gap: .5rem;
-    padding: .3rem 0;
-    border-bottom: 1px solid black;
-
-}
