Refactor TypeIcons export and refactor requestPokemon functions

--- a/src/assets/css/colors.scss
+++ b/src/assets/css/colors.scss
@@ -1,8 +1,11 @@
 :root {
+    /*COLORS*/
     --green: #8FB339;
     --gray1: #c0c0c0;
     --yellow1: #ffe131;
     --brown1: #70673c;
     --red1: #FF0000;
+
+    /**/
     --borderBottom: 2px solid black;
 }
