--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -3,15 +3,15 @@
 }
 
 h2 {
-   margin: 0;
+    margin: 0;
 }
 
 p {
-   font-weight: bold;
-   width: 100%;
-   font-size: .9rem;
-   margin: 0;
-   text-align: left;
+    font-weight: bold;
+    width: 100%;
+    font-size: .9rem;
+    margin: 0;
+    text-align: left;
 }
 
 .insideContainer {
@@ -21,7 +21,7 @@ p {
     flex-direction: column;
     align-items: center;
     width: 400px;
-    height: auto;
+    height: 590px;
     background-color: var(--yellow1);
     font-family: sans-serif;
     border: 13px solid var(--gray1);
@@ -77,6 +77,7 @@ p {
     display: flex;
     justify-content: center;
     padding: .5rem 0;
+    width: 100%;
     border-bottom: var(--borderBottom);
 }
 
@@ -84,7 +85,6 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    // padding: 1rem 0;
     width: 100%;
     height: 4.5rem;
     overflow-y: auto;
@@ -100,13 +100,13 @@ p {
 }
 
 #powerContent::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); 
+    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
 }
 
 #powerContent::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
 }
 
 #attackContainer {
@@ -134,13 +134,13 @@ p {
 }
 
 .attackHeader::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); 
+    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
 }
 
 .attackHeader::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
 }
 
 #attackValue {
@@ -159,7 +159,7 @@ p {
     gap: .5rem;
     padding: .5rem 0;
     border-bottom: var(--borderBottom);
-    
+
 }
 
 .powerTypeIconsContainer {
@@ -199,4 +199,3 @@ p {
     font-weight: bold;
     font-size: 1.2rem;
 }
-
